k8s/server/production/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: n8n-server
spec:
  selector:
    app: n8n-server
    env: production
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5678
