k8s/server/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: n8s-server
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: n8n.axs-labs.com
    http:
      paths:
      - backend:
          serviceName: n8n-server
          servicePort: 80
  tls:
  - hosts:
    - n8n.axs-labs.com
    secretName: n8nio-tls
